--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,1 +1,43 @@
-  
+.wrapper {
+  display: flex;
+}
+.side-bar {
+  background-color: #253141;
+  width: 300px;
+  height: 100vh;
+}
+
+.up-side-bar {
+  height: 100px;
+  background-color: #253141;
+  padding: 0 20px;
+}
+
+.groups {
+  height: calc(100vh - 100px);
+  background-color: #2f3e51;
+  padding: 0 20px;
+}
+
+.chat {
+  background-color: #ffffff;
+  width: calc(100% - 300px);
+}
+
+.chat-user-name {
+  height: 100px;
+  background-color: #ffffff;
+  padding: 0 40px;
+}
+
+.main-chat-view {
+  height: calc(100vh - 100px - 90px);
+  background-color: #fafafa;
+  padding: 46px 40px 0;
+}
+
+.chat-form {
+  height: 90px;
+  background-color: #DDDDDD;
+  padding: 20px 40px;
+}
