--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,9 @@
 <div class="chat-user-name">
+
   <div class="chat-name">
   hogehuga
   </div>
+
   <div class="chat-end-btn">
     <a href="#">チャットを終了する</a>
   </div>
@@ -23,8 +25,20 @@
       </div>
     </div>
   </div>
+</div>
 
-  <div class="message">
+  <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f| %>
+    <div class ="form-input">
+      <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <%= f.file_field :image, class: 'hidden' %>
+      </label>
+    </div>
+    <%= f.submit '送信', class: 'form-submit' %>
+  <% end %>
+
+  <%# <div class="message">
     <div class="upper-message">
       <div class="message-user">
         Tom
@@ -39,9 +53,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> %>
 
-<div class="form">
+<%# <div class="form">
   <div class="message-text">
     <input placeholder="type a message" class="form-message">
     <label class="form-image">
@@ -50,4 +64,4 @@
     </label>
   </div>
     <input type="submit" value="送信" class="form-submit">
-</div>
+</div> %>
