--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -120,10 +120,16 @@
   display: flex;
 }
 
+.form-input {
+  display: flex;
+  width: 100%;
+  background-color: white;
+}
+
 .message-text {
   background-color: white;
-  width: 100%;display: flex;
-
+  width: 100%;
+  display: flex;
 }
 
 .form-message {
