チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,8 @@
 <div class="chat-user-name">
-
-  <div class="chat-name">
-  hogehuga
+  <div class="left-header">
+    <div class="chat-name">
+      <%= @room.name %>
+    </div>
   </div>
 
   <div class="chat-end-btn">
