--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -5,8 +5,10 @@
     </div>
   </div>
 
-  <div class="chat-end-btn">
-    <a href="#">チャットを終了する</a>
+  <div class="right-header">
+    <div class="chat-end-btn">
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
+    </div>
   </div>
 </div>
 
